# nyx-vox

./: .dockerignore  .gitignore  LICENSE  README.md  README.ru.md  package.json  test_paste.py
.github/workflows/: release.yml
docs/: AI_PROMPTS.md  CHANGELOG.md  CHANGELOG.ru.md  README.md  TECHNICAL.md  TECHNICAL.ru.md  index.html
docs/tags/: README.md
docs/tags/v0.1.3-beta/: release.md
docs/tags/v1.0.0/: release.md
src-tauri/: .gitignore  Cargo.toml  Info.plist  download-model.sh  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_provider.rs  check_perm.rs  deepgram.rs  deepseek.rs  diag.rs  groq.rs  history.rs  keys.rs  lib.rs  main.rs  prompts.rs  qwen.rs  state.rs  tray.rs  utils.rs  whisper.rs  window.rs
src-tauri/src/commands/: ai.rs  app.rs  audio.rs  mod.rs  settings.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/history/: page.tsx
src/app/update/: page.tsx
src/app/welcome/: page.tsx
src/components/: CreatorSignature.tsx  FeedbackModal.tsx  SettingsPanel.tsx  UpdatePopup.tsx  WaveformVisualizer.tsx  WelcomeOverlay.tsx
src/components/settings/: Common.tsx  EnginesTab.tsx  GeneralTab.tsx  HistoryTab.tsx  InfoTab.tsx  KeysTab.tsx  translations.ts
src/constants/: appInfo.tsx  version.ts
src/hooks/: useAudioRecorder.ts
src/store/: useStore.ts
src/types/: tauri.d.ts
