[package]
name = "app"
version = "0.1.1-beta"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-clipboard = "2.1.11"
tauri-plugin-shell = "2.3.5"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
tokio = { version = "1.43", features = ["full"] }
cpal = "0.15"
hound = "3.5"
whisper-rs = { version = "0.11", features = ["metal"] }
window-vibrancy = "0.7.1"
tungstenite = "0.24"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
url = "2"
reqwest = { version = "0.12", features = ["stream", "multipart", "json"] }
futures-util = "0.3"
enigo = "0.2.1"
dirs-next = "2.0"
tauri-plugin-window-state = "2.0.0-rc"
core-graphics = "0.23.2"
objc2-app-kit = { version = "0.3.2", features = ["NSWorkspace", "NSRunningApplication"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
