[package]
name = "app"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-clipboard = "2.1.11"
tauri-plugin-shell = "2.3.5"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
tokio = { version = "1.43", features = ["full"] }
cpal = "0.15"
hound = "3.5"
whisper-rs = { version = "0.16", features = ["metal"] }
window-vibrancy = "0.7.1"
tungstenite = "0.24"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
url = "2"
reqwest = { version = "0.12", features = ["stream", "multipart", "json"] }
base64 = "0.22"
futures-util = "0.3"
enigo = "0.2.1"
dirs-next = "2.0"
machineid-rs = "1.2"
aes-gcm = "0.10"
sha2 = "0.10"
tauri-plugin-window-state = "2.0.0-rc"
core-graphics = "0.23.2"
objc2-app-kit = { version = "0.3.2", features = ["NSWorkspace", "NSRunningApplication", "NSApplication"] }
objc2-foundation = { version = "0.3.2", features = ["NSDate", "NSString"] }
objc2-av-foundation = { version = "0.3.2", features = ["AVCaptureDevice", "AVMediaFormat"] }
libc = "0.2.183"
macos-accessibility-client = "0.0.2"
core-foundation = "0.9.4"
regex = "1.12.3"
uuid = { version = "1.10", features = ["v4", "serde"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
